add new todos, refresh form and format ul children

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <div id="container">
 
       <form id="main-form">
-        <input type="text" placeholder="Add todo item...">
+        <input id="new-todo" type="text" placeholder="Add todo item...">
         <input type="submit" value="Add Item">
       </form>
 
-      <ul id="todo"></ul>
+      <ul id="todo">
+      </ul>
 
       <ul id="completed"></ul>
 
