displays list of completed items

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         <input type="submit" value="Add Item">
       </form>
 
+      <h2>To do....</h2>
       <ul id="todo">
       </ul>
 
-      <ul id="completed"></ul>
+      <h2>Completed</h2>
+      <ul id="completed">
+        <li>Completed Items</li>
+      </ul>
 
     </div>
 
