css & readme added

--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
 
       <form id="main-form">
         <input id="new-todo" type="text" placeholder="Add todo item...">
-        <input type="submit" value="Add Item">
+        <input id="input-button" type="submit" value="Add Item">
       </form>
 
-      <h2>To do....</h2>
-      <ul id="todo">
-      </ul>
+        <h2>To do....</h2>
+        <ul id="todo">
+        </ul>
 
-      <h2>Completed</h2>
-      <ul id="completed">
-        <li>Completed Items</li>
-      </ul>
+        <h2>Completed</h2>
+        <ul id="completed">
+        </ul>
 
     </div>
 
